# trajectory-spatialhash

./: .gitignore  ALGORITHM_IMPLEMENTATION.md  ALGORITHM_VISUAL_GUIDE.md  ASYNC_IMPLEMENTATION_SUMMARY.md  ASYNC_QUERY_METHODS.md  AVOIDING_BUSY_WAITING.md  BATCH_SHARD_PROCESSING.md  BINARY_FORMAT_VERIFICATION.md  BLUEPRINT_ASYNC_QUERIES.md  CMakeLists.txt  COMPILER_ERROR_FIX.md  COMPILER_ERROR_FIX_SUMMARY.md  CORRECT_API_USAGE.md  IMPLEMENTATION_SUMMARY_ASYNC_LOADING.md  IMPLEMENTATION_SUMMARY_BATCH_PROCESSING.md  IMPLEMENTATION_SUMMARY_NEAREST_NEIGHBOR.md  IMPLEMENTATION_SUMMARY_PER_TIMESTEP.md  INCREMENTAL_HASH_TABLE_BUILDING.md  MEMORY_OPTIMIZATION.md  NEAREST_NEIGHBOR_QUERY_GUIDE.md  QUERY_API_INTEGRATION_SUMMARY.md  README.md  SHARD_DISCOVERY_CENTRALIZATION.md  STRUCT_RENAMING_DOCUMENTATION.md  SpatialHashedTrajectory.uplugin  TASK_COMPLETION_SUMMARY.md  THREAD_IMPLEMENTATION_SUMMARY.md  TRAJECTORY_QUERY_API_REFACTORING.md  TrajectoryHashPlugin.uplugin  specification-spatial-hash-table.md  verify_binary_format.cpp
.github/workflows/: build_and_test.yml
Content/: BP_DatasetVisualizerWithSpatialHash.uasset
Content/Visualization/: BP_DatasetVisualizerWithSpatialHash.uasset  BP_QueryResultVisualization.uasset  NS_FRNN_Result.uasset
Source/SpatialHashedTrajectory/: SpatialHashedTrajectory.Build.cs
Source/SpatialHashedTrajectory/Private/: AsyncQueryExampleActor.cpp  RunTrajectoryQueryAsyncAction.cpp  SpatialHashQueryAsyncTasks.cpp  SpatialHashTable.cpp  SpatialHashTableBuilder.cpp  SpatialHashTableBuilderAsyncTask.cpp  SpatialHashTableManager.cpp  SpatialHashedTrajectoryModule.cpp  TrajectoryQueryNiagaraActor.cpp
Source/SpatialHashedTrajectory/Public/: AsyncQueryExampleActor.h  FixedRadiusQueryExample.h  RunTrajectoryQueryAsyncAction.h  SpatialHashQueryAsyncTasks.h  SpatialHashTable.h  SpatialHashTableBuilder.h  SpatialHashTableBuilderAsyncTask.h  SpatialHashTableExample.h  SpatialHashTableManager.h  SpatialHashedTrajectoryModule.h  TrajectoryQueryNiagaraActor.h
Source/TrajectoryHashPlugin/: TrajectoryHashPlugin.Build.cs
Source/TrajectoryHashPlugin/Private/: TrajectoryHashPluginModule.cpp
Source/TrajectoryHashPlugin/Public/: TrajectoryHashPluginModule.h
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  trajectory_spatialhash-config.cmake
_codeql_build_dir/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_spatial_hash-b12d07c_include.cmake  test_spatial_hash-b12d07c_tests.cmake
ci/: README.md
cmake/: trajectory_spatialhash-config.cmake.in
examples/: CMakeLists.txt  use_from_other_project.cpp
examples/unreal_plugin/: README.md
examples/unreal_plugin/TrajectorySpatialHash/: TrajectorySpatialHash.uplugin
examples/unreal_plugin/TrajectorySpatialHash/Source/TrajectorySpatialHash/: TrajectorySpatialHash.Build.cs
examples/unreal_plugin/TrajectorySpatialHash/Source/TrajectorySpatialHash/Private/: TSHUEBridge.cpp
examples/unreal_plugin/TrajectorySpatialHash/Source/TrajectorySpatialHash/Public/: TSHUEBridge.h
include/trajectory_spatialhash/: config.h  shard_format.h  spatial_hash.h  ue_wrapper.h
scripts/: build-release-libs.sh  package-thirdparty.sh
src/: cli_main.cpp  shard_loader.cpp  spatial_hash.cpp  ue_wrapper.cpp
tests/: CMakeLists.txt  test_spatial_hash.cpp
